fix scrollbar in the bimdata-cards of the projects page

--- a/src/components/specific/models/models-manager/ModelsManager.scss
+++ b/src/components/specific/models/models-manager/ModelsManager.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   &.bimdata-card:deep() > .bimdata-card__content {
-    height: calc(100% - 35px);
+    height: calc(100% - 37px);
     padding: $spacing-unit;
   }
 
